// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletTitle 1`] = `
<ChartContainer
  height={140}
  width={450}
>
  <ChartLabel
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "fill": "#b8bbbe",
          "fontSize": 14,
        },
      ]
    }
    textAnchor="end"
    verticalAnchor="middle"
    x={36}
    y={70}
  />
</ChartContainer>
`;

exports[`ChartBulletTitle 2`] = `
<ChartContainer
  height={140}
  width={450}
>
  <ChartLabel
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "fill": "#b8bbbe",
          "fontSize": 14,
        },
      ]
    }
    textAnchor="end"
    verticalAnchor="middle"
    x={36}
    y={70}
  />
</ChartContainer>
`;

exports[`renders component data 1`] = `
<ChartContainer
  height={140}
  width={450}
>
  <ChartLabel
    capHeight={1.1}
    style={
      Array [
        Object {
          "fontSize": 18,
        },
        Object {
          "fill": "#b8bbbe",
          "fontSize": 14,
        },
      ]
    }
    text={
      Array [
        "Text label",
        "Measure details",
      ]
    }
    textAnchor="end"
    verticalAnchor="middle"
    x={36}
    y={70}
  />
</ChartContainer>
`;
